<resources>

    <string name="app_copyright">© 2012</string>
    <string name="app_name">PodR</string>
    <string name="app_publisher">Johan Dahlberg</string>
    <string name="app_version">0.2</string>
    <string name="activity_newsubscription_info">All subscription info will be fetched from the feed in the next update.</string>
    <string name="activity_newsubscription_url_hint">Add the subscription url</string>
    <string name="all">All</string>
    <string name="backuphelper_backup_failed">Backup failed</string>
    <string name="backuphelper_backup_succeeded">Backup succeeded</string>
    <string name="backuphelper_restore_failed">Restore failed</string>
    <string name="backuphelper_restore_succeeded">Restore succeeded</string>
    <string name="btn_add">Add</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_some_failed">Some of your downloads where incorrect</string>
    <string name="download_completed">Download completed</string>
    <string name="download_episodes">Download episodes</string>
    <string name="download_inprogress">Download in progress</string>
    <string name="download_lost_connection">Lost connection</string>
    <string name="duration">Duration</string>
    <string name="list_loading">Loading&#8230;</string>
    <string name="marked_all_read">Marked all episodes as read</string>
    <string name="marked_all_unread">Marked all episodes as unread</string>
    <string name="menu_about">About</string>
    <string name="menu_activate_autodownload">Activate Autodownload</string>
    <string name="menu_deactivate_autodownload">Deactivate Autodownload</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_markallread">Mark all as read</string>
    <string name="menu_markallunread">Mark all as unread</string>
    <string name="menu_markdownloading">Download</string>
    <string name="menu_markread">Read</string>
    <string name="menu_markunread">Unread</string>
    <string name="menu_newsubscription">New subscription</string>
    <string name="menu_play">Play</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="no_enclosure">No enclosure was found</string>
    <string name="no_summary">No summary was found</string>
    <string name="pref_category_update_and_download">Update &amp; Download</string>
    <string name="pref_summary_autodownload_limit">How many episodes should be downloaded automatically on update</string>
    <string name="pref_summary_download_only_wifi">To reduce network provider data charges, don\'t download over mobile networks</string>
    <string name="pref_summary_update_only_wifi">To reduce network provider data charges, don\'t update over mobile networks</string>
    <string name="pref_title_autodownload_limit">Auto download limit</string>
    <string name="pref_title_download_only_wifi">Download via Wi-Fi Only</string>
    <string name="pref_title_update_only_wifi">Update via Wi-Fi Only</string>
    <string name="read">Read</string>
    <string name="remove_download">Remove download</string>
    <string name="remove_subscription">Remove subscription</string>
    <string name="subscription_no_new_episode">No new episodes</string>
    <string name="subscription_one_new_episode">1 new episode</string>
    <string name="subscription_x_new_episodes">new episodes</string>
    <string name="title_about">About</string>
    <string name="title_activity_main">PodR</string>
    <string name="title_activity_main_downloads">Downloads</string>
    <string name="title_activity_main_subscriptions">Subscriptions</string>
    <string name="title_episode_detail">Episode Detail</string>
    <string name="title_episode_list">Episodes</string>
    <string name="title_newsubscription">New Subscription</string>
    <string name="title_settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_date">Unknown date</string>
    <string name="unread">Unread</string>
    <string name="update_completed">Update completed</string>
    <string name="update_inprogress">Update in progress</string>
    <string name="update_subscriptions">Update Subscriptions</string>

</resources>