<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_newsubscription"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_newsubscription"/>
    <item
        android:id="@+id/menu_import"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_import"/>
    <item
        android:id="@+id/menu_export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>