<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_markallread"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/menu_markallread" />
    <item
        android:id="@+id/menu_markallunread"
        android:orderInCategory="151"
        android:showAsAction="never"
        android:title="@string/menu_markallunread" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>